<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

	<!-- Non-translatable names -->
	<string name="tournant" translatable="false">Tournant</string>

	<!-- App bar titles -->
	<string name="recipes">Recipes</string>
	<string name="all_recipes">All recipes</string>

	<!-- Recipe -->
	<string name="recipe">Recipe</string>
	<string name="title">Title</string>
	<string name="description">Description</string>
	<string name="category">Category</string>
	<string name="cuisine">Cuisine</string>
	<string name="keywords">Keywords</string>
	<string name="season">Season</string>
	<string name="rating">Rating</string>
	<string name="source">Source</string>
	<string name="webpage">Webpage</string>
	<string name="cooktime">Cooking time</string>
	<string name="preptime">Preparation time</string>
	<string name="yield">Yield:</string>
	<string name="unit">Unit</string>
	<string name="ingredient">Ingredient</string>
	<string name="ingredients">Ingredients</string>
	<string name="amount">Amount</string>
	<string name="group">Group</string>
	<string name="optional">%s (optional)</string>
	<string name="instructions">Instructions</string>
	<string name="notes">Notes</string>
	<plurals name="servings">
		<item quantity="one">serving</item>
		<item quantity="other">servings</item>
	</plurals>
	<plurals name="lots">
		<item quantity="one">lot</item>
		<item quantity="other">lots</item>
	</plurals>
	<string name="created">Created</string>
	<string name="creation_date">Creation date</string>
	<string name="modified">Modified</string>
	<string name="modification_date">Modification date</string>
	<string name="preparations_count">Number of preparations</string>
	<string name="prepared_on">Prepared on</string>
	<string name="last_prepared">Last prepared</string>
	<string name="log_preparation">Log preparation</string>
	<string name="logbook">Logbook</string>
	<plurals name="prepared_times">
		<item quantity="one">Prepared once</item>
		<item quantity="other">Prepared %d times</item>
	</plurals>
	<string name="last_time">Last time: %s</string>

	<!-- Modes -->
	<string name="mode">Mode</string>
	<string name="mode_standalone">Standalone</string>
	<string name="mode_standalone_description_short">Standalone: Own database with recipe editing capabilities</string>
	<string name="mode_standalone_description_long">Tournant creates an own database for your recipes. You can import recipes from XML files. Recipes can be edited (in development).</string>
	<string name="mode_synced">Synced</string>
	<string name="mode_synced_description_short">Synced: Always synchronous with an XML file (read-only)</string>
	<string name="mode_synced_description_long">Tournant stays in sync with a single XML file on your device. Recipe editing is disabled because it would create conflicts and there is currently no sync feature in Gourmand to solve those.</string>

	<!-- First start UI & file choose options -->
	<string name="change_synced_file">Change synced file</string>
	<string name="change_mode_explanation">You can change the mode in the settings.</string>

	<!-- Messages -->
	<string name="no_recipes_found">No recipes found</string>
	<string name="inputstream_null">Error while opening the file</string>
	<string name="unknown_file_error">Unknown file error: %s</string>
	<string name="importing_only_in_standalone_mode">Importing only in standalone mode</string>
	<string name="file_not_changed">Synced file has not changed</string>
	<string name="no_suitable_application">No suitable application</string>
	<string name="limitations">Limitations</string>
	<string name="missing_features_gourmand">The following recipe properties are not supported by Gourmand:\n%s</string>
	<string name="recipe_imported">%s imported</string>
	<plurals name="recipes_imported">
		<item quantity="one">%s and one other recipe imported</item>
		<item quantity="other">%s and %d other recipes imported</item>
	</plurals>
	<string name="gourmand165">Floating point numbers as yield value (Gourmand issue #165)</string>

	<!-- Options menu -->
	<string name="new_recipe">New recipe</string>
	<string name="import_recipes">Import recipes</string>
	<string name="refresh">Refresh</string>
	<string name="settings">Settings</string>
	<string name="about_app_name">About %s</string>

	<!-- Recipe options menu -->
	<string name="share">Share</string>

	<!-- Action mode menu -->
	<string name="pin">Pin</string>
	<string name="unpin">Unpin</string>
	<string name="share_selected">Share selected</string>
	<string name="export_selected">Export selected</string>
	<string name="json_file">JSON file (recommended)</string>
	<string name="archive_original_images">Archive with original images</string>
	<string name="gourmand_file">Gourmand XML file</string>
	<string name="delete_selected">Delete selected</string>
	<plurals name="delete_selected_sure">
		<item quantity="one">This will permanently erase one recipe from the database. Are you sure?</item>
		<item quantity="other">This will permanently erase %d recipes from the database. Are you sure?</item>
	</plurals>
	<string name="delete_selected_sure_named">This will permanently erase %s from the database. Are you sure?</string>
	<string name="dependent_recipes">Dependent recipes</string>
	<string name="dependent_recipes_found">The selection contains one or more recipes which are used in other recipes. You must resolve these dependencies or delete them as well.\nDependent recipes: %s</string>
	<string name="share_all">Share all</string>
	<string name="export_all">Export all</string>
	<string name="select_all">Select all</string>

	<!-- Settings -->
	<string name="general_settings">General settings</string>
	<string name="be_careful">Be careful</string>
	<string name="keep_screen_on">Keep the display on in the single recipe view</string>
	<string-array name="mode_options">
		<item>@string/mode_standalone</item>
		<item>@string/mode_synced</item>
	</string-array>
	<string-array name="mode_options_summary">
		<item>@string/mode_standalone_description_short</item>
		<item>@string/mode_synced_description_short</item>
	</string-array>
	<string name="synced_file">Synced Gourmand XML file</string>
	<string name="markdown_support">Markdown support</string>
	<string name="color_theme">Color scheme</string>
	<string-array name="color_theme_options">
		<item>@string/auto_follow_system</item>
		<item>@string/light</item>
		<item>@string/dark</item>
	</string-array>
	<string name="auto_follow_system">Auto (follow system)</string>
	<string name="light">Light</string>
	<string name="dark">Dark</string>
	<string name="language">Language</string>
	<string name="import_export">Gourmand compatibility</string>
	<string name="use_comma_as_decimal_separator">Use a comma as decimal separator when importing and exporting</string>
	<string name="delete_all_recipes">Delete all recipes</string>
	<string name="delete_all_recipes_sure">This will permanently erase <b>all imported recipes</b> in the database. Are you sure?</string>

	<!-- About -->
	<string name="website">Website</string>
	<string name="version">Version</string>
	<string name="license">License</string>
	<string name="code">Source</string>
	<string name="issues">Bug tracker</string>
	<string name="translations">Translations</string>
	<string name="donate">Donate</string>
	<string name="libraries">Libraries</string>

	<!-- Search -->
	<string name="search">Search</string>
	<string name="type_or_tap_to_search">Type or tap to search…</string>

	<!-- General purpose -->
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="done">Done</string>
	<string name="copy_to_clipboard">Copy to clipboard</string>
	<string name="copied_to_clipboard">Copied to clipboard</string>
	<string name="egg">Have a cookie: 🍪</string>
	<string name="less">less</string>
	<string name="more">more</string>
	<string name="reset">reset</string>
	<string name="n_selected">%d selected</string>
	<string name="add_to_selection">Add to selection</string>
	<string name="remove">Remove</string>
	<string name="options">Options</string>
	<string name="menu">Menu</string>
	<string name="inspiration">Looking for inspiration?</string>
	<string name="to">to</string>
	<string name="from">from</string>
	<string name="until">until</string>
	<string name="weigh">Weigh</string>

	<!-- Editing -->
	<string name="edit">Edit</string>
	<string name="save">Save</string>
	<string name="add_photo">Add photo</string>
	<string name="remove_photo">Remove photo</string>
	<string name="unset_rating">Unset rating</string>
	<string name="make_optional">Make optional</string>
	<string name="make_mandatory">Make mandatory</string>
	<string name="scale_to">Scale to</string>
	<string name="app_language">App language</string>
	<string name="supported_languages">Supported languages</string>
	<string name="all_languages">All languages</string>
	<string name="comma_separated">comma-separated</string>

	<!-- Sort options -->
	<string name="sort_by">Sort by</string>
	<string name="totaltime">Total time</string>
	<string name="instructions_length">Instructions length</string>
	<string name="ingredients_count">Number of ingredients</string>
	<string name="ascending">Ascending</string>
	<string name="descending">Descending</string>

	<!-- Timer -->
	<string name="set_alarm">Set alarm</string>
	<string name="set_timer">Set timer</string>
	<string name="timer_set">Timer set to %s</string>
	<string name="hours_for_regex">(hour)|(hours)</string>
	<string name="minutes_for_regex">(minute)|(minutes)</string>
	<string name="seconds_for_regex">(second)|(seconds)</string>

	<!-- Currently unused -->
	<plurals name="n_recipes" tools:keep="@plurals/n_recipes">
		<item quantity="one">%d recipe</item>
		<item quantity="other">%d recipes</item>
	</plurals>
	<string name="choose_file_long" tools:ignore="UnusedResources">Choose a Gourmet/Gourmand XML file from your device.</string>
	<string name="file_does_not_exist" tools:ignore="UnusedResources">The file does not exist</string>
	<string name="recipe_not_found" tools:ignore="UnusedResources">Recipe not found</string>
	<string name="recipe_count" tools:ignore="UnusedResources">Number of recipes</string>
	<string name="checked" tools:ignore="UnusedResources">checked</string>
	<string name="database_id" tools:ignore="UnusedResources">Database ID</string>

</resources>