<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<PreferenceCategory
		app:title="@string/general_settings">

		<ListPreference
			app:key="mode"
			app:title="@string/mode"
			app:entries="@array/mode_options"
			app:icon="@drawable/ic_settings"/>

		<SwitchPreference
			android:key="auto_backup"
			android:title="Auto backup at startup"
			app:icon="@android:drawable/stat_notify_sync" />

		<Preference
			app:icon="@drawable/ic_link"
			app:key="backup_file"
			app:title="Backup file" />

		<Preference
			app:key="file"
			app:title="@string/synced_file"
			app:icon="@drawable/ic_link"/>

		<SwitchPreference
			app:key="markdown"
			app:title="@string/markdown_support"
			app:icon="@drawable/ic_markdown"/>

		<SwitchPreference
			app:key="keep_screen_on"
			app:title="@string/keep_screen_on"
			app:singleLineTitle="false"
			app:icon="@drawable/ic_screen"/>

		<ListPreference
			app:key="color_theme"
			app:title="@string/color_theme"
			app:entries="@array/color_theme_options"
			app:icon="@drawable/ic_colors"/>

		<ListPreference
			app:key="language"
			app:title="@string/language"
			app:icon="@drawable/ic_lang"/>

	</PreferenceCategory>

	<PreferenceCategory
		app:title="@string/import_export">

		<SwitchPreference
			app:key="decimal_separator"
			app:title="@string/use_comma_as_decimal_separator"
			app:singleLineTitle="false"
			app:icon="@drawable/ic_numbers"/>

	</PreferenceCategory>

	<PreferenceCategory
		app:title="@string/be_careful">

		<Preference
			app:key="delete_all_recipes"
			app:title="@string/delete_all_recipes"
			app:icon="@drawable/ic_delete_all"/>

	</PreferenceCategory>

</PreferenceScreen>