<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/new_recipe"
		android:title="@string/new_recipe"/>

	<item
		android:id="@+id/import_recipes"
		android:title="@string/import_recipes"/>

	<item
		android:id="@+id/refresh"
		android:title="@string/refresh"
		android:visible="false"/>

	<item
		android:id="@+id/sorting"
		android:title="@string/sort_by"/>

	<item
		android:id="@+id/export_all"
		android:title="@string/export_all">

		<menu>
			<item android:id="@+id/export_all_json"
				android:title="@string/json_file"
				android:icon="@drawable/ic_file"/>

			<item android:id="@+id/export_all_zip"
				android:title="@string/archive_original_images"
				android:icon="@drawable/ic_archive"/>

			<item android:id="@+id/export_all_gourmand"
				android:title="@string/gourmand_file"
				android:icon="@drawable/ic_cookie"/>
		</menu>

	</item>

	<item
		android:id="@+id/share_all"
		android:title="@string/share_all">

		<menu>
			<item android:id="@+id/share_all_json"
				android:title="@string/json_file"
				android:icon="@drawable/ic_file"/>

			<item android:id="@+id/share_all_zip"
				android:title="@string/archive_original_images"
				android:icon="@drawable/ic_archive"/>

			<item android:id="@+id/share_all_gourmand"
				android:title="@string/gourmand_file"
				android:icon="@drawable/ic_cookie"/>
		</menu>

	</item>

	<item
		android:id="@+id/select_all"
		android:title="@string/select_all"/>

</menu>