<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/share"
		android:title="@string/share"
		android:icon="@drawable/ic_share"
		app:showAsAction="ifRoom">

		<menu>
			<item android:id="@+id/share_json"
				android:title="@string/json_file"
				android:icon="@drawable/ic_file"/>

			<item android:id="@+id/share_zip"
				android:title="@string/archive_original_images"
				android:icon="@drawable/ic_archive"/>

			<item android:id="@+id/share_gourmand"
				android:title="@string/gourmand_file"
				android:icon="@drawable/ic_cookie"/>
		</menu>

	</item>

	<item
		android:id="@+id/edit"
		android:title="@string/edit"
		android:icon="@drawable/ic_edit"
		app:showAsAction="ifRoom"/>

</menu>