<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:id="@+id/activity_main_welcome"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:gravity="center_horizontal"
		android:padding="32dp"
		android:divider="@drawable/divider_vertical_double"
		android:showDividers="middle">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp"
			android:background="@drawable/round_corners"
			android:backgroundTint="?attr/colorSurface">

			<TextView
				android:id="@+id/app_name_and_version"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/tournant"
				android:textColor="@color/highlight_color"
				style="@style/h1"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/no_recipes_found"
				android:textSize="18sp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:gravity="center">

			<com.google.android.material.button.MaterialButton
				android:id="@+id/button_new_recipe"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/new_recipe"
				app:icon="@drawable/ic_plus"/>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/choose_file"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/import_recipes"
				app:icon="@drawable/ic_folder"/>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/recipes_website"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/inspiration"
				app:icon="@drawable/ic_restaurant"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp"
			android:background="@drawable/round_corners"
			android:backgroundTint="?attr/colorSurface">

			<TextView
				android:id="@+id/mode_info"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/mode_standalone_description_short"
				android:textColor="@color/highlight_color"
				android:textSize="18sp"
				style="@style/h"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="8dp"
				android:text="@string/change_mode_explanation"
				android:textSize="16sp"/>

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="16dp"
			android:background="@drawable/round_corners"
			android:backgroundTint="?attr/colorSurface">

		<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dp"
				android:text="@string/mode_standalone"
				android:textColor="@color/highlight_color"
				android:textSize="16sp"
				style="@style/h"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/mode_standalone_description_long"
				android:textSize="15sp"
				android:layout_marginBottom="8dp"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="2dp"
				android:text="@string/mode_synced"
				android:textColor="@color/highlight_color"
				android:textSize="16sp"
				style="@style/h"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:text="@string/mode_synced_description_long"
				android:textSize="15sp"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>